--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "app-react": "file:",
+    "firebase": "^11.0.2",
     "panda-css": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "sweetalert2": "^11.14.5",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
