--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "panda:watch": "panda watch"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "app-react": "file:",
     "firebase": "^11.0.2",
     "panda-css": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.2",
     "sweetalert2": "^11.14.5",
     "uuid": "^11.0.2"
   },
