--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "animate.css": "^4.1.1",
     "app-react": "file:",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.14.4",
     "panda-css": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.5",
     "uuid": "^11.0.2"
   },
