--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "panda:watch": "panda watch"
   },
   "dependencies": {
+    "@styled-system/css": "^5.1.5",
     "animate.css": "^4.1.1",
     "app-react": "file:",
     "firebase": "^11.0.2",
