--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@pandacss/dev": "^0.47.0",
+    "@pandacss/core": "^0.49.0",
+    "@pandacss/dev": "^0.47.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^5.4.8"
+    "vite": "^6.0.3"
   }
 }
