--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "styled-system": "^5.1.5",
     "sweetalert2": "^11.14.5",
     "uuid": "^11.0.2"
   },
