--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,6 @@
-{"projectId":"prj_vZuH4x7wwqY016jaA6AkwQNDw0YG","orgId":"team_PrOiKPEnumWx0heAcOiyPOqF"}
+{
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
+    ]
+  }
+  
