--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "rewrites": [
-      { "source": "/:path*", "destination": "/" }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
+}
